@@ -1,14 +1,0 @@
-<?php
-/** Alemannic (Alemannisch)
-  *
-  * @package MediaWiki
-  * @subpackage Language
-  */
-
-require_once( 'LanguageUtf8.php' );
-
-class LanguageAls extends LanguageUtf8 {
-	#FIXME: inherit everything for now
-}
-
-?>
